# sdr-panel

./: .gitignore  .python-version  pyproject.toml  requirements.txt
monitor/: settings.py
